<package>
  <name>uav300_head</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for uav300_head</p>
    <p>This package contains configuration data, 3D models and launch files
for uav300_head robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>urdf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>urdf</run_depend>
  <export>
    <architecture_independent />
  </export>
</package>